compiler/testData/diagnostics/tests/noneApplicableMessage.fir.kt
// RUN_PIPELINE_TILL: FRONTEND
// ISSUE: KT-80684
// RENDER_DIAGNOSTICS_FULL_TEXT
// WITH_STDLIB
fun main() {
    <!NONE_APPLICABLE!>println<!>(::<!UNRESOLVED_REFERENCE!>unresolved<!>)
}

/* GENERATED_FIR_TAGS: functionDeclaration */
